fix: shift notification menu to right

--- a/src/app/shared/components/notification-bell/notification-bell.scss
+++ b/src/app/shared/components/notification-bell/notification-bell.scss
@@ -18,6 +18,7 @@
 // ============================================================================
 ::ng-deep {
   .notification-menu {
+    margin-right: -14px !important;
     max-width: none !important;
     width: 360px;
     background: transparent !important;
